addons/cilium-gatewayapi/http-routes.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prom-route
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "gateway-admin-prom.sctp-sandbox.com"
spec:
  parentRefs:
    - name: shared-gateway
      namespace: gateway
  hostnames:
    - gateway-admin-prom.sctp-sandbox.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "gateway-admin-grafana.sctp-sandbox.com"
spec:
  parentRefs:
    - name: shared-gateway
      namespace: gateway
  hostnames:
    - gateway-admin-grafana.sctp-sandbox.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: argocd-route
#   namespace: argocd
#   annotations:
#     external-dns.alpha.kubernetes.io/hostname: "gateway-admin-argocd.sctp-sandbox.com"
# spec:
#   parentRefs:
#     - name: shared-gateway
#       namespace: gateway
#   hostnames:
#     - gateway-admin-argocd.sctp-sandbox.com
#   rules:
#     - backendRefs:
#       - name: argocd-server
#         port: 80
